docs: refresh the READMEs for the relocated model API and Gemma4 multimodal